SSL-deployment/apache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: httpd:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: apache-config
          mountPath: /usr/local/apache2/conf/httpd.conf
          subPath: httpd.conf
        - name: apache-certs
          mountPath: /usr/local/apache2/conf/certs
          readOnly: true
      volumes:
      - name: apache-config
        configMap:
          name: apache-config
      - name: apache-certs
        secret:
          secretName: apache-certs



# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: apache-deployment
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: apache
#   template:
#     metadata:
#       labels:
#         app: apache
#     spec:
#       containers:
#       - name: apache
#         image: httpd:latest
#         ports:
#         - containerPort: 80
