SSL-deployment/apache-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-ingress
  namespace: default
spec:
  tls:
  - hosts:
    - apache.local.com
    secretName: apache-certs
  rules:
  - host: apache.local.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache-service
            port:
              number: 80
